--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/jstarmx/smirror/issues"
   },
   "homepage": "https://github.com/jstarmx/smirror#readme",
-  "devDependencies": {
+  "dependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.4",
@@ -35,6 +35,7 @@
     "lint-staged": "^7.0.4",
     "lodash": "^4.17.5",
     "mysql": "^2.15.0",
+    "mysql2": "^1.5.3",
     "pm2": "^2.10.2",
     "prettier": "^1.11.1",
     "qs": "^6.5.1",
