--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lodash": "^4.17.5",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
+    "nodemon": "^1.17.5",
     "pm2": "^2.10.2",
     "prettier": "^1.11.1",
     "qs": "^6.5.1",
